@@ -1,3 +1,8 @@
+2011-10-25  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_html.php: Deleted problematic name change
+	into textarea function
+
 2011-10-24  Junichi Satoh  <junichi@rworks.jp>
 
 	* include/functions_api.php: Fixed 'id_alert_template' variable.
